--- a/src/index.html
+++ b/src/index.html
@@ -13,10 +13,12 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
-      <div id="top"></div>
-      <div id="number"></div>
-      <div id="bottom"></div>
+    <div class="d-flex text-center bg-success justify-content-center">
+      <div class="card bg-white">
+        <div class="top" id="top"></div>
+        <div class="number" id="number"></div>
+        <div class="bottom" id="bottom"></div>
+      </div>
     </div>
   </body>
 </html>
